--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.2.4"
   },
   "proxy": "http://localhost:8080"
