--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
