--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/lodash": "^4.17.7",
     "tailwindcss": "^3.2.4"
   },
   "proxy": "http://localhost:8080"
